# SimpleNES

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Emulator.h  PPU.h  VirtualScreen.h
scripts/: build-libs.sh  build.sh  build_brotli.sh  build_freetype2.sh  build_libflac.sh  build_libogg.sh  build_libvorbis.sh  build_sfml.sh  validate-sha256sum.sh  validate_sha256sum.sh
src/: Emulator.cpp  PPU.cpp  VirtualScreen.cpp  index.html  style.css
